Bug 338413 - [onlinebanking] crash while entering account numbers and switching to different payee
Summary: [onlinebanking] crash while entering account numbers and switching to differe...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: onlinebanking (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Christian David
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-20 18:31 UTC by MK
Modified: 2014-09-15 19:35 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
dump of crash (9.07 KB, text/plain)
2014-08-20 18:31 UTC, MK
Details

Note You need to log in before you can comment on or make changes to this bug.
Description MK 2014-08-20 18:31:06 UTC
Created attachment 88335 [details]
dump of crash

Tried to enter BIC/IBAN numbers for payee X. Selected different payee Y while entered data of X is not saved. Crash occurred.
Comment 1 Christian David 2014-09-15 19:35:53 UTC
Git commit ac56ec5bf4c9940448f2519a33ac1c38d2f14341 by Christian Dávid.
Committed on 15/09/2014 at 19:21.
Pushed by christiand into branch 'add-onlinebanking'.

Fixed a crash in payeeIdentifierModel

Fixed this behaviour: "Tried to enter BIC/IBAN numbers for payee X.
Selected different payee Y while entered data of X is not saved. Crash
occurred."

M  +0    -2    kmymoney/models/payeeidentifiermodel.cpp

http://commits.kde.org/kmymoney/ac56ec5bf4c9940448f2519a33ac1c38d2f14341