Fixed a crash in payeeIdentifierModel

Fixed this behaviour: "Tried to enter BIC/IBAN numbers for payee X.
Selected different payee Y while entered data of X is not saved. Crash
occurred."

BUG: 338413